--- a/src/scss/globals/_vars.scss
+++ b/src/scss/globals/_vars.scss
@@ -9,6 +9,7 @@ $ff-dancing: 'Dancing Script', cursive;
 $ff-dosis: 'Dosis', sans-serif;
 $ff-josef: 'Josefin Sans', sans-serif;
 $ff-lato: 'Lato', serif;
+$ff-merri: 'Merriweather', serif;
 $ff-mont: 'Montserrat', sans-serif;
 $ff-muli: 'Muli', sans-serif;
 $ff-open: 'Open Sans', sans-serif;
