--- a/src/scss/organisms/_about.scss
+++ b/src/scss/organisms/_about.scss
@@ -2,42 +2,44 @@
   background-image: none;
 
   .about__title {
-    margin-bottom: 0;
-    font-family: $ff-dancing;
-    color: #4b382c;
-    padding-top: 30px;
+    margin-top: 30px;
+    margin-bottom: 30;
+    color: #5f5f5e;
     font-weight: 400;
-
-    @include font-size(60px, 55px, 50px, 48px, 48px);
-
-    @media (min-width: 991px) {
-      padding-top: 50px;
-    }
   }
 
   .about__doctor {
-    color: #0491ab;
+    color: #72afc8;
+    font-family: $ff-merri;
     font-weight: 700;
-    font-size: 42px;
     line-height: 1;
-
-    @include font-size(42px, 36px, 34px, 36px, 36px);
+    margin-bottom: 15px;
 
     &--title {
-      color: #0491ab;
-      font-size: 35px;
+      color: #72afc8;
+      font-weight: 400;
+
+      @include h5();
     }
   }
 
-  p {
-    &.about__copy {
-      margin-top: 30px;
+  .about__link {
+    color: #72afc8;
+    text-decoration: underline !important;
 
-      &--last {
-        @media (min-width: 991px) {
-          padding-bottom: 50px;
-        }
-      }
+    &:active,
+    &:hover {
+      color: #72afc8;
+    }
+  }
+
+  .about__copy {
+    margin-top: 15px;
+    font-size: 16px;
+    color: #5f5f5e;
+
+    @media (min-width: 992px) {
+      font-size: 13px;
     }
   }
 
@@ -50,10 +52,22 @@
   @media (min-width: 992px) {
     .about-main-bg {
       padding: 30px 0;
-      background-image: url(/assets/lori-bio.jpg);
-      background-size: contain;
+      background-image: url(/assets/team/doc-bio.jpg);
+      background-size: cover;
       background-repeat: no-repeat;
       background-position: top left;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .about-main-bg {
+      padding: 20px 0;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    .about-main-bg {
+      padding: 60px 0;
     }
   }
 }
