--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -6,21 +6,46 @@
             <div class="row">
                 <div class="col-md-7 col-md-push-5">
                     {# this is content #}
-                    <h2 class="about__title">Meet the Doctor</h2>
-                    <h3 class="about__doctor">Lori Smith, <span class="about__doctor--title">DDS</span></h3>
-                    {# this is the mobile and tablet image (only shows then) #}
-                    <div class="center">
-                        <img src="/assets/lori-mobile-bio.jpg" alt="{{ mainDoctor }}" class="about-mobile-image hidden-md hidden-lg">
-                    </div>
-                    <p class="about__copy">By combining advanced clinical dentistry with a fun, friendly style, Dr. Smith and her team will make you and your family more comfortable than you ever thought possible. Each year Dr. Smith participates in extensive postdoctoral studies from the nation’s foremost clinicians, who provide some of the latest advances in dental technology and the most effective materials available. So whether you’re looking for advanced cosmetic restorations, or simply a place to help maintain your family’s oral health, we’ll give you something to smile about!</p>
-                    <p class="about__copy about__copy--last">A native of Oklahoma, Dr. Smith earned her doctorate from the University of Oklahoma College of Dentistry. She and her husband, Lawrence, have been married for 16 years and love spending family time with their twins, Maggie and Bryson. They are active in their church and the local community.</p>
+                    <h2 class="about__title">Meet the Team</h2>
+                    <h4 class="about__doctor">Paul B. Smith, <span class="about__doctor--title">DDS</span></h4>
+                    <p class="about__copy">By combining advanced dental technology with a gentle, friendly style, Dr.
+                        Smith and his team will make you and your family more comfortable than you ever thought
+                        possible.</p>
+                    <a href="#" data-target="#modal--smith" data-toggle="modal" class="about__link hidden-xs hidden-sm hidden-lg">Read More</a>
+                    <p class="about__copy hidden-md">Dr. Smith earned his doctorate from the University of Texas at San Antonio,
+                        and each year, he continues to study the latest advances in cosmetic and family dentistry. His
+                        use of state-of-the-art technology—including Invisalign® “invisible” orthodontics, professional
+                        smile-whitening, and tooth-colored restorations—will help you and your family maintain
+                        beautiful, healthy smiles for a lifetime.</p>
+                    <p class="about__copy hidden-md">Dr. Smith and his wife, Jamie, have been married for over ten years and have
+                        four children. He is an avid outdoorsman and is active in his church and local community.</p>
+                    {% include 'molecules/associations__carousel.twig' %}
                 </div>
             </div>
         </div>
     </div>
 
+    <div id="modal--smith" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">X</span></button>
+                    <h4 class="about__doctor">Paul B. Smith, <span class="about__doctor--title">DDS</span></h4>
+                </div>
+                <div class="modal-body">
+                    <p class="about__copy">Dr. Smith earned his doctorate from the University of Texas at San Antonio,
+                        and each year, he continues to study the latest advances in cosmetic and family dentistry. His
+                        use of state-of-the-art technology—including Invisalign® “invisible” orthodontics, professional
+                        smile-whitening, and tooth-colored restorations—will help you and your family maintain
+                        beautiful, healthy smiles for a lifetime.</p>
+                    <p class="about__copy">Dr. Smith and his wife, Jamie, have been married for over ten years and have
+                        four children. He is an avid outdoorsman and is active in his church and local community.</p>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     {# these are the icons on bottom #}
-    {% include 'molecules/associations__carousel.twig' %}
 
 </section>
 
