--- a/src/templates/molecules/associations__carousel.twig
+++ b/src/templates/molecules/associations__carousel.twig
@@ -2,11 +2,11 @@
     {#<div class="container">#}
         <div class="associations-carousel--wrapper">
             <div class="owl-carousel js-associations-carousel">
-                <div class="logo--wrapper"><img src="/assets/association-logos/logos_0004_logos_0003_american-dental-association.jpg" alt="American Dental Association"></div>
-                <div class="logo--wrapper"><img src="/assets/association-logos/logos_0002_oda.jpg" alt="Oklahoma Dental Association"></div>
-                <div class="logo--wrapper"><img src="/assets/association-logos/logos_0003_nfdh.jpg" alt="National Foundation of Dentistry for the Handicapped"></div>
-                <div class="logo--wrapper"><img src="/assets/association-logos/logos_0000_aawd.jpg" alt="American Association of Women Dentists"></div>
-                <div class="logo--wrapper"><img src="/assets/association-logos/logos_0001_ultradent.jpg" alt="American Dental Association"></div>
+                <div class="logo--wrapper"><img src="/assets/associations/1_ada.jpg" alt="American Dental Association"></div>
+                <div class="logo--wrapper"><img src="/assets/associations/2_texas-dental-associateion.jpg" alt="Texas Dental Association"></div>
+                <div class="logo--wrapper"><img src="/assets/associations/3_ghds.jpg" alt="GHDS Since 1984"></div>
+                <div class="logo--wrapper"><img src="/assets/associations/4_agd.jpg" alt="Academy of General Dentistry"></div>
+                <div class="logo--wrapper"><img src="/assets/associations/5_ortho.jpg" alt="The American Orthodontic Society"></div>
             </div>
         </div>
     {#</div>#}
