--- a/src/scss/globals/_vars.scss
+++ b/src/scss/globals/_vars.scss
@@ -1,5 +1,6 @@
 //Font Families
 $ff-advent: 'Advent Pro', sans-serif;
+$ff-arimo: 'Arimo', sans-serif;
 $ff-berkshir: 'Berkshire Swash', cursive;
 $ff-cardo: 'Cardo', serif;
 $ff-caveat: 'Caveat Brush', cursive;
