--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -107,4 +107,9 @@
   .side-header #header .container {
     width: 290px !important;
   }
+
+  .side-header #primary-menu ul li {
+    margin: 15px 0 0;
+    padding-bottom: 10px;
+  }
 }
