--- a/src/templates/organisms/specials--three-card.twig
+++ b/src/templates/organisms/specials--three-card.twig
@@ -1,7 +1,7 @@
 <section id="section-specials" class="parallax">
     <div class="heading center">
         <h2 class="heading__title">Limited Time Summer Specials</h2>
-        <h3 class="heading__byline">Offer Ends Sept 20, 2017</h3>
+        <h2 class="heading__byline">Offer Ends Sept 20, 2017</h2>
         <p class="heading__sub-title">Offers Good for New Uninsured Patients Only</p>
     </div>
 
@@ -15,7 +15,7 @@
                     <h2 class="specials-card__cost"> 65</h2>
                 </div>
                 <div class="specials-card__bottom">
-                    <p class="specials-card__savings">SAVE $142</p>
+                    <p class="specials-card__savings">SAVE $157</p>
                     <p class="specials-card__copy">Includes comprehensive exam by the doctor and necessary x‑rays.</p>
                     <p class="specials-card__codes">(D0150, D0330, D0274)</p>
                 </div>
@@ -28,8 +28,8 @@
                     <h2 class="specials-card__cost"> 45</h2>
                 </div>
                 <div class="specials-card__bottom">
-                    <p class="specials-card__savings">SAVE $55</p>
-                    <p class="specials-card__copy">Includes a professional dental&nbsp;cleaning. <strong>A new patient exam is required.</strong><br><strong>Does not include periodontal&nbsp;therapy.</strong></p>
+                    <p class="specials-card__savings">SAVE $33</p>
+                    <p class="specials-card__copy">Includes a professional dental cleaning. A new patient exam is required. Does not include periodontal&nbsp;therapy.</p>
                     <p class="specials-card__codes">(D1110, D1208)</p>
                 </div>
             </div>
@@ -38,10 +38,10 @@
             <div class="specials-card">
                 <div class="specials-card__top">
                     <h3 class="specials-card__title">New Children's <br>Cleaning & Exam</h3>
-                    <h2 class="specials-card__cost"> 99</h2>
+                    <h2 class="specials-card__cost"> 75</h2>
                 </div>
                 <div class="specials-card__bottom">
-                    <p class="specials-card__savings">SAVE $183</p>
+                    <p class="specials-card__savings">SAVE $128</p>
                     <p class="specials-card__copy">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a comprehensive exam. </p>
                     <p class="specials-card__codes">(D1120, D1208, D0272, D0150)</p>
                 </div>
