--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -1,6 +1,6 @@
 <section id="section-reviews" class="parallax">
     <div class="container">
-        <h2 class="heading">See What Our Patients are Saying</h2>
+        <h2 class="heading">Read What Our Patients Are Saying</h2>
     </div>
     {#<h4 class="heading__byline center">Real reviews from some of our patients.</h4>#}
 
