--- a/src/scss/organisms/_reviews.scss
+++ b/src/scss/organisms/_reviews.scss
@@ -1,7 +1,8 @@
 #section-reviews {
-  background-image: url('/assets/blue-pattern-bg.svg');
-  background-size: 100px !important;
-  background-repeat: repeat;
+  background-image: url('/assets/reviews-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top right;
   padding-bottom: 45px;
   border-bottom: none;
 
@@ -10,10 +11,10 @@
     text-align: center;
     margin-top: $spacing-md;
     margin-bottom: 30px;
-    color: #48392e;
-    font-weight: bold;
+    color: #fff;
     letter-spacing: 1.12px;
     line-height: 1.2;
+    font-weight: 400;
     //text-shadow: 0 2px 4px rgba(230, 236, 255, 0.71);
   }
 
@@ -43,7 +44,7 @@
     width: 100%;
   }
 
-  @include birdeye-footer(#4b382c, false);
+  @include birdeye-footer(#fff, false);
 
   .bf-spn {
     font-family: $ff-lato;
