--- a/src/scss/organisms/_insurance.scss
+++ b/src/scss/organisms/_insurance.scss
@@ -1,8 +1,8 @@
 #section-insurance {
-  $c-no-insurance: #06b7d7;
-  $c-sub-header: #4b382c;
-  $c-preventative: #303030;
-  $c-copy: #303030;
+  $c-no-insurance: #5f5f5e;
+  $c-sub-header: #72afc8;
+  $c-preventative: #4d4d4d;
+  $c-copy: #4d4d4d;
   $c-mobile-bg: #fff;
 
   text-align: right;
@@ -11,35 +11,32 @@
 
   .title {
     letter-spacing: 0;
-    font-family: $ff-dancing;
-    font-weight: 400;
-    margin-bottom: 0;
+    margin-bottom: 15px;
     line-height: 1;
     color: $c-no-insurance;
-    padding: 15px 0;
+    padding-top: 20px;
 
-    @include font-size(106px, 106px, 70px, 70px, 55px);
+    @include font-size(54px, 48px, 44px, 40px, 36px);
   }
 
   .sub-title {
     font-weight: 400;
     color: $c-sub-header;
+    font-family: $ff-merri;
     margin-bottom: 0;
-    text-transform: uppercase;
-    letter-spacing: 1.7px;
 
-    @include font-size(33px, 33px, 24px, 25px, 20px);
+    @include font-size(38px, 34px, 30px, 28px, 26px);
   }
 
   .preventative-care {
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.5;
     color: $c-preventative;
     letter-spacing: -0.24px;
-    padding: 20px 0;
+    padding: 5px 0 15px;
     margin-bottom: 0;
 
-    @include font-size(37px, 35px, 24px, 30px, 23px);
+    @include font-size(28px, 24px, 22px, 22px, 20px);
   }
 
   .insurance__copy {
@@ -48,7 +45,7 @@
     margin-bottom: 10px;
     line-height: 1.2;
 
-    @include font-size(18px, 17px, 16px, 16px, 15px);
+    @include font-size(18px, 15px, 16px, 16px, 15px);
 
     @media (min-width: 768px) {
       text-align: left;
@@ -78,9 +75,8 @@
   }
 
   .btn {
-    margin-top: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-top: 30px;
+    font-size: 12px;
 
     @include lr-padding(80px, 70px, 60px, 60px, 40px);
   }
