--- a/src/scss/molecules/_buttons.scss
+++ b/src/scss/molecules/_buttons.scss
@@ -1,20 +1,21 @@
 a.btn,
 button.btn {
   font-family: $ff-lato;
-  font-weight: 700 !important;
-  background-color: #ffa300;
+  font-weight: 900 !important;
+  background-color: #30a3d3;
   color: #fff;
   border-radius: 50px;
   border: solid 3px #fff;
-  padding: 10px 50px;
+  padding: 12px 30px;
   text-transform: uppercase;
+  letter-spacing: 1px;
   //box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.36);
 
   @include font-size(17px, 16px, 16px, 15px, 15px);
 
   &:hover,
   &:focus {
-    background-color: lighten(#ffa300, 10%);
+    background-color: lighten(#30a3d3, 10%);
     color: #fff;
     //box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.46);
     transition: all 0.3s ease;
