team carousel and modals

--- a/src/index.twig
+++ b/src/index.twig
@@ -22,21 +22,21 @@
 
     <div id="content" >
 
-        {% include 'molecules/cta__two-to-one.twig' with {
-            id: 'cta-one',
-            existingPatients: true
-        } %}
+        {#{% include 'molecules/cta__two-to-one.twig' with {#}
+            {#id: 'cta-one',#}
+            {#existingPatients: true#}
+        {#} %}#}
 
         {% include 'organisms/about.twig' %}
 
         {% include 'organisms/specials--three-card.twig' %}
 
-        {% include 'molecules/cta__two-to-one.twig' with {
-            id: 'cta-two',
-            existingPatients: false,
-            shadow: false,
-            classes: "cta--no-border"
-        } %}
+        {#{% include 'molecules/cta__two-to-one.twig' with {#}
+            {#id: 'cta-two',#}
+            {#existingPatients: false,#}
+            {#shadow: false,#}
+            {#classes: "cta--no-border"#}
+        {#} %}#}
 
         {% include 'organisms/reviews.twig' %}
 
